--- a/02-iniciando-no-front-end/desafio-2-2/views/index.html
+++ b/02-iniciando-no-front-end/desafio-2-2/views/index.html
@@ -3,19 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style/style.css" />
     <title>Portfólio</title>
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300; 400; 500 & display = swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
-    <link
-
-
-
       rel="shortcut icon"
-
-      
       href="../images/favicon.ico"
       type="image/x-icon"
     />
@@ -28,6 +19,20 @@
         <a href="tel:+5547992078767">Telefone</a>
       </div>
     </header>
+
+    <div id="wrapper">
+      <img src="../images/perfil.png" alt="" />
+
+      <h1>Johnny Jefferson</h1>
+      <h2>Front-end Developer</h2>
+      <p>
+        Programador Front end, focado na melhor performa do cliente. Atualmente
+        trabalhando na
+        <a href="https//google.com" target="_blank"
+          >Academia Militar das Agulhas Negras</a
+        >
+      </p>
+    </div>
 
     <script src="../scripts/main.js"></script>
   </body>
