--- a/02-iniciando-no-front-end/pagina-de-portfolio/css/modal-overlay.css
+++ b/02-iniciando-no-front-end/pagina-de-portfolio/css/modal-overlay.css
@@ -1,16 +1,2 @@
-/* popape com modal */
+/* pop-up com modal */
 
-.modal-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-}
-
-.fechar {
-  color: aliceblue;
-  font-size: 32px;
-  text-decoration: none;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
