--- a/02-iniciando-no-front-end/pagina-de-portfolio/css/style.css
+++ b/02-iniciando-no-front-end/pagina-de-portfolio/css/style.css
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css2? family = Roboto: wght @ 300; 400; 500 & display = swap';
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');
 /* para criar variavel de seletores, facilitanto o código e as alteraçõe a serem feitos */
 :root {
   --color-green: #0de46d;
@@ -14,6 +14,7 @@
 
 body {
   background: #282a36;
+  font-family: 'Roboto Mono', monospace;
 }
 
 header {
@@ -98,6 +99,7 @@ header {
 
 .card {
   background-color: #7159c1;
+  cursor: pointer;
 }
 
 .card__image_containner img {
@@ -129,6 +131,8 @@ header {
   height: 100%;
   position: fixed;
   top: 0;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .modal {
@@ -141,6 +145,24 @@ header {
 
 .modal .close-modal {
   color: black;
-  right: 0;
+  right: 10px;
+  top: 10px;
+  position: absolute;
+  cursor: pointer;
+}
+
+/* MODAL ATIVE */
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Video Iframe */
+
+iframe {
+  width: 100%;
+  height: 90%;
+  top: 40px;
   position: absolute;
 }
