--- a/02-iniciando-no-front-end/desafio-2-3/css/conteudos.css
+++ b/02-iniciando-no-front-end/desafio-2-3/css/conteudos.css
@@ -89,3 +89,9 @@ iframe {
   top: 40px;
   position: absolute;
 }
+
+.footer {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
