incluindo arquivos do Foodfy

--- a/02-iniciando-no-front-end/Foodfy/views/index.html
+++ b/02-iniciando-no-front-end/Foodfy/views/index.html
@@ -23,7 +23,7 @@
     <main id="text-principal">
       <div class="caixa-aviso">
         <div class="image-principal">
-          <img src="../public/assets/chef.png" alt="" />
+          <img src="../public/assets/chef.png" alt="chef" />
         </div>
         <div class="text">
           <h1>As melhores receitas</h1>
