--- a/02-iniciando-no-front-end/Foodfy/public/styles/style.css
+++ b/02-iniciando-no-front-end/Foodfy/public/styles/style.css
@@ -1,31 +1,86 @@
 @import 'https://fonts.googleapis.com/css2? family = Roboto + Slab: wght @ 600; 900 & display = swap';
-@import "'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,500;1,700&display=swap'";
+@import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,500;1,700&display=swap';
 * {
-  margin: 0;
   padding: 0;
-  border: 0;
+  margin: 0;
 }
-
 body {
+  background-color: white;
   font-family: 'Roboto', sans-serif;
 }
 
-/* header */
+.content {
+  margin: 32px 220px;
+}
 
-.home a {
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 70px;
-  margin: 0 10px;
+header {
   margin-top: 20px;
-  font-size: 20px;
-  color: black;
+  margin-bottom: 20px;
+}
+
+.menus {
+}
+
+.menus a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #111111;
 }
 
 #text-principal {
   border-radius: 30px;
   margin: 0 auto;
-  background: slategrey;
-  max-width: 800px;
-  max-height: 400px;
+  background: #fbdfdb 100%;
+  max-width: 940px;
+  height: 366px;
+  position: relative;
+}
+
+.image-principal img {
+  position: absolute;
+  right: 0;
+  margin-top: 65px;
+  margin-right: 50px;
+}
+
+/* CARDE MAIS ACESSADOS */
+
+h2 {
+  font-size: 18px;
+}
+.inf p {
+  font-size: 14px;
+  color: #777777;
+}
+
+.cards {
+  max-width: 940px;
+  height: 140px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.card {
+}
+
+.card__imge__content img {
+  border-radius: 30px;
+  width: 100%;
+}
+
+footer {
+  background-color: #eeeeee;
+  opacity: 100%;
+  width: 100%;
+  margin-top: 380px;
+  padding: 25px;
+  position: absolute;
+  text-align: center;
+}
+
+footer p {
+  font-size: 14px;
+  color: #999999;
 }
