--- a/02-iniciando-no-front-end/Foodfy/views/index.html
+++ b/02-iniciando-no-front-end/Foodfy/views/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/styles/style.css" />
+    <link rel="stylesheet" href="../public/styles/cards.css" />
+    <script src="./js/scripts.js"></script>
+
     <link
       rel="shortcut icon"
       href="../public/favicon.ico"
@@ -11,39 +14,117 @@
     />
     <title>Foodfy | Desafio</title>
   </head>
+
   <body>
-    <header>
-      <div class="home">
-        <img src="../public/assets/logo.png" alt="logo" />
-        <a href="">Sobre</a>
-        <a href="">Receitas</a>
-      </div>
-    </header>
-    <!-- PRINCIPAL PAINEL - AS MELHORES RECEITAS -->
-    <main id="text-principal">
-      <div class="caixa-aviso">
-        <div class="image-principal">
-          <img src="../public/assets/chef.png" alt="chef" />
+    <div class="content">
+      <header>
+        <div>
+          <div class="menus">
+            <img src="../public/assets/logo.png" alt="logo" />
+            <a href="">Sobre</a>
+            <a href="">Receitas</a>
+          </div>
         </div>
-        <div class="text">
-          <h1>As melhores receitas</h1>
-          <p>
-            Aprenda a construir os melhores pratos com receitas criandas por
-            prifissionais do mundo inteiro.
-          </p>
+      </header>
+      <!-- PRINCIPAL PAINEL - AS MELHORES RECEITAS -->
+      <main id="text-principal">
+        <div class="caixa-aviso">
+          <div class="image-principal">
+            <img src="../public/assets/chef.png" alt="chef" />
+          </div>
+          <div class="text">
+            <h1>As melhores receitas</h1>
+            <p>
+              Aprenda a construir os melhores pratos com receitas criandas por
+              prifissionais do mundo inteiro.
+            </p>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
 
-    <!-- SECTION - MAIS ACESSADAS -->
+      <!-- SECTION - MAIS ACESSADAS -->
 
-    <section>
-      <div class="cads">
+      <section>
         <h1>Mais acessadas</h1>
-        <div class="cad"></div>
-      </div>
-    </section>
 
-    <script src="./js/scripts.js"></script>
+        <div class="cards">
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/asinhas.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/burger.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/espaguete.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/lasanha.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/doce.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+
+          <div class="card">
+            <div class="card__imge__content">
+              <img src="../public/assets/pizza.png" alt="" />
+            </div>
+            <div class="card__content">
+              <h2>Asinhas de frango ao barbecue</h2>
+            </div>
+            <card class="inf">
+              <p>por Vania Steroski</p>
+            </card>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+      <p>Todos os direitos reservados, receitas Foodfy</p>
+    </footer>
   </body>
 </html>
