--- a/02-iniciando-no-front-end/codigos/views/index.html
+++ b/02-iniciando-no-front-end/codigos/views/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <title>Portfólio</title>
   </head>
   <body>
+    <header>
+      <div class="home">
+        <a href="/">Contato</a>
+        <a href="/">Sobre</a>
+      </div>
+    </header>
+
+    <section>
+      <div id="wrapper">
+        <img src="" alt="Johnny Jefferson" />
+      </div>
+    </section>
+
     <script src="../scripts/main.js"></script>
   </body>
 </html>
