--- a/02-iniciando-no-front-end/desafio-2-1/views/index.html
+++ b/02-iniciando-no-front-end/desafio-2-1/views/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfólio</title>
     <link
       href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300; 400; 500 & display = swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="../style/style.css" />
-    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <title>Portfólio</title>
+    <link
+      rel="shortcut icon"
+      href="../images/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
