--- a/02-iniciando-no-front-end/Foodfy/views/index.html
+++ b/02-iniciando-no-front-end/Foodfy/views/index.html
@@ -2,129 +2,95 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/styles/style.css" />
-    <link rel="stylesheet" href="../public/styles/cards.css" />
-    <script src="./js/scripts.js"></script>
-
     <link
       rel="shortcut icon"
       href="../public/favicon.ico"
       type="image/x-icon"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../public/styles/style.css" />
+    <link rel="stylesheet" href="../public/styles/cards.css" />
+    <script src="./js/scripts.js"></script>
     <title>Foodfy | Desafio</title>
   </head>
 
   <body>
-    <div class="content">
-      <header>
-        <div>
-          <div class="menus">
-            <img src="../public/assets/logo.png" alt="logo" />
-            <a href="">Sobre</a>
-            <a href="">Receitas</a>
-          </div>
+    <header class="wrapper">
+      <div class="nav-bar-home">
+        <img src="../public/assets/logo.png" alt="logo" />
+        <a href="about.html">Sobre</a>
+        <a href="revenue.html">Receitas</a>
+      </div>
+
+      <div class="caixa-aviso">
+        <img src="../public/assets/chef.png" alt="chef" />
+
+        <div class="text">
+          <h2>As melhores receitas</h2>
+          <p>
+            Aprenda a construir os melhores pratos com receitas criandas por
+            prifissionais do mundo inteiro.
+          </p>
         </div>
-      </header>
-      <!-- PRINCIPAL PAINEL - AS MELHORES RECEITAS -->
-      <main id="text-principal">
-        <div class="caixa-aviso">
-          <div class="image-principal">
-            <img src="../public/assets/chef.png" alt="chef" />
-          </div>
-          <div class="text">
-            <h1>As melhores receitas</h1>
-            <p>
-              Aprenda a construir os melhores pratos com receitas criandas por
-              prifissionais do mundo inteiro.
-            </p>
-          </div>
+      </div>
+    </header>
+
+    <h2 id="acess">Mais acessadas</h2>
+
+    <section class="cards">
+      <!-- cards -->
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
         </div>
-      </main>
+      </div>
 
-      <!-- SECTION - MAIS ACESSADAS -->
-
-      <section>
-        <h1>Mais acessadas</h1>
-
-        <div class="cards">
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/asinhas.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
-
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/burger.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
-
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/espaguete.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
-
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/lasanha.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
-
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/doce.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
-
-          <div class="card">
-            <div class="card__imge__content">
-              <img src="../public/assets/pizza.png" alt="" />
-            </div>
-            <div class="card__content">
-              <h2>Asinhas de frango ao barbecue</h2>
-            </div>
-            <card class="inf">
-              <p>por Vania Steroski</p>
-            </card>
-          </div>
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
         </div>
-      </section>
-    </div>
+      </div>
 
-    <footer>
-      <p>Todos os direitos reservados, receitas Foodfy</p>
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../public/assets/asinhas.png" alt="" />
+        <div class="info">
+          <h3>Asinhas de frango ao barbecue</h3>
+          <p>por Vania Steroski</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <p>Todos direitos reservados, receitas Foodfy.</p>
     </footer>
   </body>
 </html>
