--- a/02-iniciando-no-front-end/Foodfy/views/index.html
+++ b/02-iniciando-no-front-end/Foodfy/views/index.html
@@ -23,8 +23,6 @@
       </div>
 
       <div class="caixa-aviso">
-        <img src="../public/assets/chef.png" alt="chef" />
-
         <div class="text">
           <h2>As melhores receitas</h2>
           <p>
@@ -32,6 +30,7 @@
             prifissionais do mundo inteiro.
           </p>
         </div>
+        <img src="../public/assets/chef.png" alt="chef" />
       </div>
     </header>
 
@@ -40,10 +39,18 @@
     <section class="cards">
       <!-- cards -->
       <div class="card">
-        <img src="../public/assets/asinhas.png" alt="" />
+        <img src="../public/assets/burger.png" alt="" />
         <div class="info">
-          <h3>Asinhas de frango ao barbecue</h3>
-          <p>por Vania Steroski</p>
+          <h3>Triplo bacon burger</h3>
+          <p>por Jorge Relato</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../public/assets/doce.png" alt="" />
+        <div class="info">
+          <h3>Docinhos pão-do-céu</h3>
+          <p>por Ricardo Golvea</p>
         </div>
       </div>
 
@@ -56,34 +63,26 @@
       </div>
 
       <div class="card">
-        <img src="../public/assets/asinhas.png" alt="" />
+        <img src="../public/assets/espaguete.png" alt="" />
         <div class="info">
-          <h3>Asinhas de frango ao barbecue</h3>
-          <p>por Vania Steroski</p>
+          <h3>Espaguete ao alho</h3>
+          <p>por Júlia Kinoto</p>
         </div>
       </div>
 
       <div class="card">
-        <img src="../public/assets/asinhas.png" alt="" />
+        <img src="../public/assets/lasanha.png" alt="" />
         <div class="info">
-          <h3>Asinhas de frango ao barbecue</h3>
-          <p>por Vania Steroski</p>
+          <h3>Lasanha mac n’ cheese</h3>
+          <p>por Juliano Vieira</p>
         </div>
       </div>
 
       <div class="card">
-        <img src="../public/assets/asinhas.png" alt="" />
+        <img src="../public/assets/pizza.png" alt="" />
         <div class="info">
-          <h3>Asinhas de frango ao barbecue</h3>
-          <p>por Vania Steroski</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="../public/assets/asinhas.png" alt="" />
-        <div class="info">
-          <h3>Asinhas de frango ao barbecue</h3>
-          <p>por Vania Steroski</p>
+          <h3>Pizza 4 estações</h3>
+          <p>por Fabiana Melo</p>
         </div>
       </div>
     </section>
