--- a/02-iniciando-no-front-end/Foodfy/public/views/index.html
+++ b/02-iniciando-no-front-end/Foodfy/public/views/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/styles/style.css" />
-    <title>Foodfy || Desafio</title>
+    <title>Foodfy</title>
   </head>
 
   <body>
