--- a/02-iniciando-no-front-end/Portfolio/views/classes.html
+++ b/02-iniciando-no-front-end/Portfolio/views/classes.html
@@ -84,7 +84,7 @@
           />
         </div>
         <div class="card__content">
-          <p>Um Fracasso não é o Fim</p>
+          <p>Um Fracasso não é o Fim glforo l</p>
         </div>
         <div class="card_inf">
           <p>6:37min</p>
